Fix: Panel - fxa icon align center

--- a/userChrome.css
+++ b/userChrome.css
@@ -275,11 +275,9 @@
   }
   #appMenu-fxa-status2,
   #appMenu-zoom-controls2 {
+    align-items: center;
     padding-top:    var(--arrowpanel-menuimageblank-padding) !important;
     padding-bottom: var(--arrowpanel-menuimageblank-padding) !important;
-  }
-  #appMenu-fxa-status2::before {
-    margin-top: var(--arrowpanel-menuimageblank-padding);
   }
 
   /* Icons Color */
